feat: update second asignment