@@ -13,7 +13,26 @@ public class PluginController implements IPluginController
 {
     public boolean init() {
         try {
-            File currentDir = new File("./plugins");
+            // Try different possible plugin directory locations
+            File currentDir = new File("plugins");
+            if (!currentDir.exists()) {
+                currentDir = new File("../plugins");
+            }
+            if (!currentDir.exists()) {
+                currentDir = new File("microkernel/plugins");
+            }
+            if (!currentDir.exists()) {
+                currentDir = new File("microkernel/microkernel/plugins");
+            }
+
+            // Check if plugins directory exists
+            if (!currentDir.exists()) {
+                System.out.println("Warning: Plugins directory not found. Tried 'plugins', '../plugins', 'microkernel/plugins', and 'microkernel/microkernel/plugins'.");
+                System.out.println("Info: No plugins loaded. Application will run without plugins.");
+                return true;
+            }
+
+            System.out.println("Info: Loading plugins from: " + currentDir.getAbsolutePath());
 
             // Define a FilenameFilter to include only .jar files
             FilenameFilter jarFilter = new FilenameFilter() {
@@ -23,24 +42,41 @@ public class PluginController implements IPluginController
                 }
             };
 
-            String []plugins = currentDir.list(jarFilter);
+            String[] plugins = currentDir.list(jarFilter);
+            
+            // Check if plugins array is null or empty
+            if (plugins == null) {
+                System.out.println("Error: Could not read plugins directory.");
+                return false;
+            }
+            
+            if (plugins.length == 0) {
+                System.out.println("Info: No JAR plugins found in '" + currentDir.getAbsolutePath() + "' directory.");
+                return true;
+            }
+
             int i;
             URL[] jars = new URL[plugins.length];
             for (i = 0; i < plugins.length; i++)
             {
-                jars[i] = (new File("./plugins/" + plugins[i])).toURL();
+                File jarFile = new File(currentDir, plugins[i]);
+                jars[i] = jarFile.toURI().toURL();
             }
             URLClassLoader ulc = new URLClassLoader(jars, App.class.getClassLoader());
             for (i = 0; i < plugins.length; i++)
             {
                 String pluginName = plugins[i].split("\\.")[0];
-                IPlugin plugin = (IPlugin) Class.forName("br.edu.ifba.inf008.plugins." + pluginName, true, ulc).newInstance();
+                System.out.println("Info: Loading plugin: " + pluginName);
+                Class<?> pluginClass = Class.forName("br.edu.ifba.inf008.plugins." + pluginName, true, ulc);
+                IPlugin plugin = (IPlugin) pluginClass.getDeclaredConstructor().newInstance();
                 plugin.init();
             }
 
+            System.out.println("Info: Successfully loaded " + plugins.length + " plugin(s).");
             return true;
         } catch (Exception e) {
             System.out.println("Error: " + e.getClass().getName() + " - " + e.getMessage());
+            e.printStackTrace();
 
             return false;
         }
